--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
+    "@ngxs/devtools-plugin": "^3.8.2-dev.master-09bece1",
+    "@ngxs/logger-plugin": "^3.8.2-dev.master-09bece1",
+    "@ngxs/store": "^3.8.2-dev.master-09bece1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
